# Nonlinear-Optimization

./: .gitignore  CMakeLists.txt  README.md  TODO.md
examples/: CMakeLists.txt  Chebyquad.cpp  LinearAlgebra.cpp  LinearFullRank.cpp  LinearRankOne.cpp  MatrixMultiplication.cpp  Quadratic.cpp  Rosenbrock.cpp  Trigonometric.cpp  matrix.cpp
include/Optimization/: BFGS.hpp  BaseAlgorithm.hpp  Function.hpp  LineSearch.hpp  LineSearchBackTrack.hpp  LineSearchNocedal.hpp  QuasiNewton.hpp  Result.hpp  SteepestDescent.hpp
src/: BFGS.cpp  BaseAlgorithm.cpp  CMakeLists.txt  Function.cpp  LineSearch.cpp  LineSearchBackTrack.cpp  LineSearchNocedal.cpp  QuasiNewton.cpp  Result.cpp  SteepestDescent.cpp
